[gd_scene load_steps=7 format=2]

[ext_resource path="res://icon.png" type="Texture" id=1]
[ext_resource path="res://Scenes/Weapons/Projectiles/RigidProjectiles/ExplosiveRigidProjectile.gd" type="Script" id=2]

[sub_resource type="PhysicsMaterial" id=1]
rough = true
bounce = 0.3
absorbent = true

[sub_resource type="Curve" id=2]
_data = [ Vector2( 0.176656, 1 ), 0.0, 0.0, 0, 0, Vector2( 0.990536, 0 ), -1.51675, 0.0, 0, 0 ]

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 9.11165, 8.64987 )

[sub_resource type="CircleShape2D" id=4]
radius = 107.173

[node name="Granade" type="RigidBody2D"]
mass = 0.3
physics_material_override = SubResource( 1 )
gravity_scale = 30.0
continuous_cd = 2
contacts_reported = 1
contact_monitor = true
can_sleep = false
linear_damp = 0.0
script = ExtResource( 2 )
explosion_path = "res://Scenes/Explosions/Mediocre_Explosion.tscn"
explosion_radius = 250.0
sticky = true
delay_after_hit = 1200
damage_curve = SubResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
modulate = Color( 0, 1, 0.0392157, 1 )
scale = Vector2( 0.3, 0.3 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 3 )

[node name="ExplosionRadius" type="Area2D" parent="."]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="ExplosionRadius"]
shape = SubResource( 4 )
[connection signal="body_entered" from="." to="." method="_on_Granade_body_entered"]
[connection signal="body_entered" from="ExplosionRadius" to="." method="_on_ExplosionRadius_body_entered"]
[connection signal="body_exited" from="ExplosionRadius" to="." method="_on_ExplosionRadius_body_exited"]
